--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ session.get('lang', 'en') }}">
 <head>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}?v=2">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if session.get('lang', 'en') == 'ar' %}مجموعة الغيث العالمية{% else %}ALGHAITH Int Group{% endif %}</title>
