--- a/templates/dashboard/base_dashboard.html
+++ b/templates/dashboard/base_dashboard.html
@@ -406,7 +406,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('dashboard.role_dashboard') }}">
-            <i class="bi bi-building me-2"></i>Alghaith HR
+            <i class="bi bi-building me-2"></i>ALGHAITH Int Group
         </a>
         
         <button class="mobile-nav-trigger" type="button" id="sidebarToggle">
@@ -535,7 +535,7 @@
 <!-- Footer -->
 <footer>
     <div class="container-fluid">
-        &copy; 2025 Alghaith HR System. All rights reserved.
+        &copy; 2025 Alghaith Int Group. All rights reserved.
     </div>
 </footer>
 
