--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1386,7 +1386,7 @@
                     <div class="contact-item">
                         <i class="fas fa-user-friends"></i>
                         <div>
-                            <div>{% if session.get('lang', 'en') == 'ar' %}رئيس قسم الموارد البشرية{% else %}Head of HR Department{% endif %}</div>
+                            <div>{% if session.get('lang', 'en') == 'ar' %}نائب المدير{% else %}Deputy Manager{% endif %}</div>
                             <a href="tel:+218913724743">+218 913724743</a>
                             <a href="tel:+218923724743">+218 923724743</a>
                         </div>
